# lutris-bridge

./: .gitignore  CLAUDE.md  Dockerfile.build  build-appimage.sh  build.sh  lutris-bridge-gui.spec  lutris-bridge.spec  pyproject.toml
lutris-bridge.AppDir/: .DirIcon  AppRun  lutris-bridge.desktop
lutris_bridge/: __init__.py  artwork.py  cli.py  config.py  gui.py  log.py  lutris_config.py  lutris_db.py  script_gen.py  state.py  steam_appid.py  steam_shortcuts.py  sync.py
tests/: create_test_db.py  create_test_vdf.py  test_appid.py  test_lutris_db.py  test_script_gen.py  test_shortcuts_vdf.py
tests/fixtures/: pga.db  shortcuts.vdf
